pia-sample-merchant/src/main/fabric8/preprod/route.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/disable_cookies: true
  labels:
    group: nets.eu
    project: pia-merchant-service
    environment: preprod
  name: pia-merchant
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: pia-merchant-service
    weight: 100
